--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div class="bg">
+            <div style="width: 100%; text-align: center; position: absolute; top: calc(50% - 50vh);" class="text-black">
+                <p style="display: inline-block; vertical-align: middle;">ASAMBLEA GENERAL EXTRAORDINARIA DEL COLEGIO DE DEMOSTRACIÓN DE COSTA RICA</p>
+            </div>
             <div class="main-menu center">
                 <div class="inner">
                     <a href="https://www.detecemp.com/"><img src="img/pictograma-01.svg" class="icon color-ccc"></a>
@@ -18,13 +21,16 @@
                     <a href="https://www.detecemp.com/"><img src="img/pictograma-05.svg" class="icon color-ccc"></a>
                 </div>
             </div>
+            <div style="width: 100%; text-align: center; position: absolute; top: calc(50% + 24vh); color: #999" class="text-black">
+                <p style="display: inline-block; vertical-align: middle;">DTE Asamblea</p>
+            </div>
             <div class="inline bottom">
                 <div style="position: absolute; left: 3vw;">
                     <a href="https://www.detecemp.com/"><img src="img/pictograma-07.svg" class="icon white-svg"></a>
                     <a href="https://www.detecemp.com/"><img src="img/pictograma-08.svg" class="icon white-svg"></a>
                 </div>
-                <div style="position: absolute; height: 10vh; left: 24vw;" class="text">Presentes [98]</div>
-                <div style="position: absolute; height: 10vh; left: calc(50% - 5vw);" class="text">Hora Actual: 14:50:35</div>
+                <div style="position: absolute; height: 15vh; left: 25vw; text-align: center; line-height: 15vh;" class="text-white">Presentes [98]</div>
+                <div style="position: absolute; height: 15vh; left: calc(50% - 5vw); text-align: center; line-height: 15vh;" class="text-white">Hora Actual: 14:50:35</div>
                 <div style="position: absolute; right: 3vw;">
                     <a href="https://www.detecemp.com/" class="right"><img src="img/pictograma-06.svg" class="icon white-svg"></a>
                 </div>
