--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
         <title>DTE-Asamblea</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script>
             function getCurrentTime() {
                 var date = new Date();
@@ -18,7 +19,19 @@
             function updateTime() {
                 var ele = document.getElementById("time");
                 
-                ele.innerHTML = "DTE Asamblea - Hora Actual: " + getCurrentTime();
+                ele.innerHTML = "DTE Asamblea - Hora Actual: " + getCurrentTime() + " - Presentes [98]";
+            }
+
+            function toggleSideBar(id) {
+                var jqelement = $("#" + id);
+                
+                if(jqelement.hasClass("side-menu-visible")) {
+                    jqelement.animate({"left": "-20vw"}, 500);
+                    jqelement.removeClass("side-menu-visible");
+                } else {
+                    jqelement.animate({"left": "0px"}, 500);
+                    jqelement.addClass("side-menu-visible");
+                }
             }
 
             setInterval(updateTime,1000);
@@ -26,8 +39,23 @@
     </head>
     <body>
         <div class="bg">
-            <div class="side-menu">
-
+            <div class="side-menu center" id="sidebar">
+                <div class="inner">
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-07.svg" class="icon"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-08.svg" class="icon"></a>
+                </div>
+                <div class="side-bottom center">
+                    <div class="inner">
+                        <a href="https://www.detecemp.com/"><img src="img/pictograma-06.svg" class="icon"></a>
+                    </div>
+                </div>
+                <div class="side-toggle" onclick="toggleSideBar('sidebar')">
+                    <div class="bars">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
+                </div>
             </div>
             <div style="width: 100%; text-align: center; position: absolute; top: calc(50% - 50vh);" class="text-black">
                 <p style="display: inline-block; vertical-align: middle;">ASAMBLEA GENERAL EXTRAORDINARIA DEL COLEGIO DE DEMOSTRACIÓN DE COSTA RICA</p>
@@ -45,17 +73,7 @@
                 </div>
             </div>
             <div style="width: 100%; text-align: center; position: absolute; top: calc(50% + 24vh); color: #999" class="text-black">
-                <p style="display: inline-block; vertical-align: middle;" id="time">DTE Asamblea - Hora Actual: 14:50:35</p>
-            </div>
-            <div class="inline bottom">
-                <div style="position: absolute; left: 3vw;">
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-07.svg" class="icon white-svg"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-08.svg" class="icon white-svg"></a>
-                </div>
-                <div style="position: absolute; height: 15vh; left: 25vw; text-align: center; line-height: 15vh;" class="text-white">Presentes [98]</div>
-                <div style="position: absolute; right: 3vw;">
-                    <a href="https://www.detecemp.com/" class="right"><img src="img/pictograma-06.svg" class="icon white-svg"></a>
-                </div>
+                <p style="display: inline-block; vertical-align: middle;" id="time">DTE Asamblea - Hora Actual: 14:50:35 - Presentes [98]</p>
             </div>
         </div>
     </body>
