--- a/index.html
+++ b/index.html
@@ -2,78 +2,44 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/style.css">
-        <title>DTE-Asamblea</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script>
-            function getCurrentTime() {
-                var date = new Date();
-                var hours = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
-                var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
-                var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
-                time = hours + ":" + minutes + ":" + seconds;
-                var lblTime = document.getElementById("lblTime");
-                return time;
-            };
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
-            function updateTime() {
-                var ele = document.getElementById("time");
-                
-                ele.innerHTML = "DTE Asamblea - Hora Actual: " + getCurrentTime() + " - Presentes [98]";
-            }
+        <link rel="stylesheet" href="css/style.css">
 
-            function toggleSideBar(id) {
-                var jqelement = $("#" + id);
-                
-                if(jqelement.hasClass("side-menu-visible")) {
-                    jqelement.animate({"left": "-20vw"}, 500);
-                    jqelement.removeClass("side-menu-visible");
-                } else {
-                    jqelement.animate({"left": "0px"}, 500);
-                    jqelement.addClass("side-menu-visible");
-                }
-            }
-
-            setInterval(updateTime,1000);
-        </script>
+        <title>DTE-Asamblea</title>
     </head>
     <body>
         <div class="bg">
-            <div class="side-menu center" id="sidebar">
-                <div class="inner">
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-07.svg" class="icon"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-08.svg" class="icon"></a>
-                </div>
-                <div class="side-bottom center">
-                    <div class="inner">
-                        <a href="https://www.detecemp.com/"><img src="img/pictograma-06.svg" class="icon"></a>
-                    </div>
-                </div>
-                <div class="side-toggle" onclick="toggleSideBar('sidebar')">
-                    <div class="bars">
-                        <div class="bar1"></div>
-                        <div class="bar2"></div>
-                        <div class="bar3"></div>
-                    </div>
+            <div class="title">
+                <p>ASAMBLEA GENERAL EXTRAORDINARIA DEL COLEGIO DE DEMOSTRACIÓN DE COSTA RICA</p>
+            </div>
+            <div class="main-menu">
+                <div>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-01.svg" class="icon svg-color-darkgray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-02.svg" class="icon svg-color-gray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-03.svg" class="icon svg-color-darkgray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-09.svg" class="icon svg-color-gray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-10.svg" class="icon svg-color-darkgray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-11.svg" class="icon svg-color-gray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-04.svg" class="icon svg-color-darkgray"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-05.svg" class="icon svg-color-gray"></a>
                 </div>
             </div>
-            <div style="width: 100%; text-align: center; position: absolute; top: calc(50% - 50vh);" class="text-black">
-                <p style="display: inline-block; vertical-align: middle;">ASAMBLEA GENERAL EXTRAORDINARIA DEL COLEGIO DE DEMOSTRACIÓN DE COSTA RICA</p>
+            <div class="info-box">
+                <p>DTE Asamblea - Presentes [98] - Hora Actual: 14:50:34</p>
             </div>
-            <div class="main-menu center">
-                <div class="inner">
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-01.svg" class="icon color-ccc"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-02.svg" class="icon color-777"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-03.svg" class="icon color-ccc"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-09.svg" class="icon color-777"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-10.svg" class="icon color-777"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-11.svg" class="icon color-ccc"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-04.svg" class="icon color-777"></a>
-                    <a href="https://www.detecemp.com/"><img src="img/pictograma-05.svg" class="icon color-ccc"></a>
+            <div class="other-menu">
+                <div class="left">
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-07.svg" class="icon svg-color-white"></a>
+                    <a href="https://www.detecemp.com/"><img src="img/pictograma-08.svg" class="icon svg-color-white"></a>
                 </div>
-            </div>
-            <div style="width: 100%; text-align: center; position: absolute; top: calc(50% + 24vh); color: #999" class="text-black">
-                <p style="display: inline-block; vertical-align: middle;" id="time">DTE Asamblea - Hora Actual: 14:50:35 - Presentes [98]</p>
+                <div class="right">
+                    <a href="https://www.detecemp.com/" class="right"><img src="img/pictograma-06.svg" class="icon svg-color-white"></a>
+                </div>
             </div>
         </div>
     </body>
