--- a/index.html
+++ b/index.html
@@ -7072,7 +7072,10 @@
                     <g id="Pantalla">
                         <rect x="334.322" y="133.052" width="714.472" height="401.89"/>
                         <foreignObject x="334.322" y="133.052" width="714.472" height="401.89">
-                            <iframe src="https://www.youtube.com/embed/LXb3EKWsInQ" frameborder="0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                            <!--<iframe src="https://www.youtube.com/embed/LXb3EKWsInQ" frameborder="0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>-->
+                            <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
+                                <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://success.zoom.us/wc/join/{meeting-id}" frameborder="0"></iframe>
+                            </div>
                         </foreignObject>
                     </g>
                     <foreignObject x="251.32" y="530.944" width="880" height="125">
