Responsive en Safari resuelto?

--- a/index.html
+++ b/index.html
@@ -7148,12 +7148,12 @@
 
                     <foreignObject x="0" y="535" width="1383.115" height="135" class="mobile-show">
                         <!-- position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: block; -->
-                        <div style="" class="center">
+                        <div class="center">
                             <div class="info-box inner">
                                 <p style="width: 700px;" class="mobile-landscape-hide">DTE Asamblea</p>
                                 <div style="display: flex; width: 700px;">
                                     <p class="lbl-info" style="width: 350px; text-align: left;" format="Presentes [%p%]"></p>
-                                    <p class="lbl-info" style="width: 350px; text-align: right;" format="Hora Actual: %t%">T</p>
+                                    <p class="lbl-info" style="width: 350px; text-align: right;" format="Hora Actual: %t%"></p>
                                 </div>
                             </div>
                         </div>
